--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<input type="text" id="input-el">
-	<button id="input-btn">SAVE INPUT</button>
+	<input type="text" id="userInput">
+	<button id="inputBtn">SAVE INPUT</button>
 </body>
 </html>
