--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<input type="text" id="userInput">
 	<button id="inputBtn">SAVE INPUT</button>
+	<button id="deleteBtn">DELETE ALL</button>
 	<ul id="ul"></ul>
 </body>
 </html>
