--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 	<input type="text" id="userInput">
 	<button id="inputBtn">SAVE INPUT</button>
+	<button id="tab-btn">SAVE TAB</button>
 	<button id="deleteBtn">DELETE ALL</button>
+
 	<ul id="ul"></ul>
 </body>
 </html>
